# orion

./: GNUmakefile.in  configure  configure.ac  hadoop_classpath.txt  install_dependencies.sh  run_configure_jinliang.sh
apps/helloworld/: helloworld.jl  test.jl  test_array.jl  test_define_var.jl  test_load_data.jl  test_share.jl  test_worker.jl
apps/lda/: orion_lda.jl  orion_lda_ordered.jl  orion_lda_sort.jl  orion_lda_v2.jl  orion_lda_v4.jl  orion_lda_v5.jl  orion_lda_v8.jl  randomize.jl  serial_lda.jl  serial_lda_sw.jl
apps/lr/: orion_lr.jl  orion_lr_adarevision.jl  orion_lr_analysis.jl  orion_lr_test.jl  serial_lr.jl
apps/matrixfact/gen_src/: driver.cpp  worker.cpp
apps/sgd_mf/: orion_sgdmf.jl  orion_sgdmf_adarevision.jl  orion_sgdmf_adarevision_ordered.jl  orion_sgdmf_analysis.jl  orion_sgdmf_old.jl  orion_sgdmf_ordered.jl  orion_sgdmf_test.jl  orion_sgdmf_test2.jl  serial_sgdmf.jl  serial_sgdmf_adarevision.jl
backup/: executor.hpp  worker.hpp
conf/: config.ini
include/orion/: config.h  config.h.in  constants.hpp  glog_config.hpp  helper.hpp  noncopyable.hpp  orion_c.h  orion_test.hpp  perf.hpp  utils.hpp
include/orion/bosen/: abstract_dist_array_partition.hpp  abstract_exec_for_loop.hpp  accumulator.hpp  blob.hpp  block_queue.hpp  byte_buffer.hpp  client.hpp  client_thread.hpp  command_buffer.hpp  computer.hpp  config.hpp  configs.hpp  conn.hpp  constants.h  dense_dist_array_partitions.hpp  dim_histogram.hpp  dist_array.hpp  dist_array_access.hpp  dist_array_buffer_info.hpp  dist_array_cache.hpp  dist_array_meta.hpp  dist_array_partition.hpp  dist_array_value_request_meta.hpp  driver.h  driver.hpp  driver_message.hpp  driver_runtime.hpp  driver_task.hpp  driver_thread.hpp  event_handler.hpp  exec_for_loop_1d.hpp  exec_for_loop_space_time.hpp  exec_for_loop_space_time_ordered.hpp  exec_for_loop_space_time_unordered.hpp  execute_message.hpp  executor.hpp  executor_thread.hpp  host_info.h  host_info.hpp  julia_eval_thread.hpp  (+37 more)
include/orion/bosen/operator/: headers.hpp  star.hpp
include/orion/bosen/table/: data_table.hpp  local_table.hpp  ring_table.hpp
results/: orion_lda_v8.jl-clueweb.libsvm.25M-384-400-2018-06-11T13:01:26.698.llh  orion_lda_v8.jl-clueweb.libsvm.25M-384-400-2018-06-11T18:18:49.351.llh  orion_lda_v8.jl-clueweb.libsvm.25M-384-400-2018-06-11T19:39:17.043.llh  orion_lda_v8.jl-clueweb.libsvm.25M-384-400-2018-06-12T00:52:57.997.llh  orion_lda_v8.jl-clueweb.libsvm.8M-384-1000-2018-06-12T15:37:51.491.llh  orion_lda_v8.jl-clueweb.libsvm.8M-384-400-2018-06-12T22:39:29.898.llh  orion_lda_v8.jl-nytimes.dat-384-1000-2018-06-12T08:01:28.421.llh  orion_lda_v8.jl-pubmed.dat-384-1000-2018-06-12T10:52:50.34.llh  orion_sgdmf.jl-netflix.csv-384-1000-300-0.01-2018-06-11T11:26:32.871.loss  orion_sgdmf.jl-netflix.csv-384-1000-300-0.01-2018-06-12T01:38:35.593.loss  orion_sgdmf_adarevision.jl-netflix.csv-384-1000-100-0.08-2018-06-11T12:18:20.185.loss  orion_sgdmf_adarevision.jl-netflix.csv-384-1000-100-0.08-2018-06-12T09:29:26.963.loss  orion_sgdmf_adarevision.jl-netflix.csv-384-1000-4-0.08-2018-06-11T11:44:05.289.loss  orion_sgdmf_adarevision.jl-netflix.csv-384-1000-4-2018-06-11T09:56:21.768.loss
scripts/: config.ini  install_dependencies.sh  launch_local_hdfs.sh  run.py  run_configure.sh  run_configure_orca.sh  run_driver.py  run_julia.sh  run_julia_shell.sh
scripts/hdfs/: core-site.xml  hadoop-env.sh  hdfs-site.xml
src/: serial_sgdmf.jl  utils.jl
src/bosen/: abstract_dist_array_partition.cpp  abstract_exec_for_loop.cpp  bosen.mk  bosen_test_main.cpp  byte_buffer.cpp  conn.cpp  conn_test.cpp  constants_c.c  dist_array.cpp  dist_array_access.cpp  dist_array_meta.cpp  dist_array_partition.cpp  dist_array_partition_any.cpp  dist_array_partition_string.cpp  driver_c.c  driver_main.cpp  driver_thread.cpp  exec_for_loop.cpp  exec_for_loop_1d.cpp  exec_for_loop_space_time_ordered.cpp  exec_for_loop_space_time_unordered.cpp  julia_evaluator.cpp  julia_module.cpp  julia_thread_requester.cpp  key.cpp  master_main.cpp  mpsc_queue_test.cpp  orion_c.c  perf.cpp  server_exec_for_loop.cpp  shape_test.cpp  shuffle_csv_main.cpp  spsc_queue_test.cpp  thread_pool_test.cpp  type.cpp  util.cpp  worker.cpp  worker_c.c  worker_main.cpp  worker_test.cpp
src/bosen/protobuf/: task.pb.cc  task.pb.h  task.proto
src/julia/: #get_scope_context.jl#  .#get_scope_context.jl  abstract_dist_array.jl  ast.jl  ast_walk.jl  codegen.jl  codegen_transform.jl  constants.jl  debug.jl  dependence_analysis.jl  dist_array.jl  dist_array_access.jl  dist_array_accessor.jl  dist_array_buffer.jl  dist_array_partition.jl  driver.jl  evaluate.jl  flow_analysis.jl  function_parser.jl  get_scope_context.jl  macros.jl  orion.jl  orion_gen.jl  orion_worker.jl  parse_ast.jl  parse_function.jl  scope_context.jl  share.jl  static_parallelization.jl  symbol_table.jl  transform.jl  translate_stmt.jl  variable_scope.jl
src/support/: helper.cpp  lr_test.cpp  perf.cpp  perf_test.cpp  support.mk
vagrant/: Vagrantfile
